Prepare kanbanboard plugin for idempiere 6.1 - move packages from org.idempiere to org.kanbanboard to avoid split package